--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "js-yaml": "^3.3.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
-    "mongoose": "^4.9.0",
-    "passport": "^0.3.2",
-    "serve-static": "^1.12.1",
+    "pg": "^6.1.5",
+    "sequelize": "3.30.0",
     "swagger-tools": "0.10.1"
   },
   "devDependencies": {
