--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ services:
   - postgresql
 addons:
   postgresql: "9.4"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y gdal-bin
 before_script:
   - psql -c 'create database operator_test;' -U postgres
-  - psql -U postgres -c "create extension postgis"
+  - psql -U postgres -d operator_test -c "create extension postgis"
 node_js:
   - "6"
