--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "js-yaml": "^3.3.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "node-nominatim2": "^0.1.0",
+    "osmtogeojson": "^3.0.0-beta.0",
     "pg": "^6.1.5",
+    "query-overpass": "^1.2.0",
     "sequelize": "3.30.0",
     "swagger-tools": "0.10.1"
   },
