--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ services:
   - postgresql
 addons:
   postgresql: "9.4"
+before_install: 
+  - sudo mv /etc/apt/sources.list.d/pgdg-source.list* /tmp
+  - sudo apt-get remove -y libgdal1
+  - sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
+  - sudo apt-get update -y
+  - sudo apt-get install -y gdal-bin
 before_script:
   - psql -c 'create database operator_test;' -U postgres
   - psql -U postgres -d operator_test -c "create extension postgis"
