--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,24 @@
+sudo: required
+dist: trusty
 language: node_js
 services: 
   - postgresql
 addons:
-  postgresql: "9.4"
+  postgresql: "9.5"
+  apt:
+    packages:
+    - postgresql-9.5-postgis-2.3
+
 before_install: 
   - sudo apt-get remove -y libgdal1
   - sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
   - sudo apt-get update -y
   - sudo apt-get install -y gdal-bin
 before_script:
+  - psql -U postgres -c "create extension postgis"
   - psql -c 'create database operator_test;' -U postgres
-  - psql -U postgres -d operator_test -c "create extension postgis"
+  - psql -U postgres -d operator_test -c "CREATE EXTENSION postgis"
   - ogr2ogr --version
+
 node_js:
   - "6"
