--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-yaml": "^3.3.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "moniker": "^0.1.2",
     "node-nominatim2": "^0.1.0",
     "osmtogeojson": "^3.0.0-beta.0",
     "pg": "^6.1.5",
